# audio-classification-smartthings

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.yaml
data/: .README.md.swp  README.md
demo/: README.md
examples/: predict.py
notebooks/: 01_dataset_exploration.ipynb  02_training_cnn14.ipynb  03_training_ast.ipynb  04_ensemble_eval.ipynb  05_dataset_creation.ipynb  06_kaggle_training_reference.ipynb
results/: README.md
scripts/: prepare_dataset.sh  run_training.sh
src/: __init__.py  dataset.py  ensemble.py  evaluate.py  train.py  utils.py
src/models/: __init__.py  ast_model.py  cnn14.py
telegram_bot/: .gitignore  README.md  bot.py  inference.py  requirements.txt
tests/: test_config.py  test_ensemble.py  test_utils.py
