[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-classification-smartthings"
version = "0.1.0"
description = "Binary kitchen audio classification with CNN14 and AST (DeiT-Small)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {file = "LICENSE"}
authors = [{name = "Ayush Pandey"}]
dependencies = [
  "torch>=2.2,<3",
  "torchaudio>=2.2,<3",
  "timm>=0.9,<2",
  "numpy>=1.24,<3",
  "pandas>=2.0,<3",
  "scikit-learn>=1.3,<2",
  "pyyaml>=6,<7",
  "tqdm>=4.66,<5",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E501"]
